[package]
name = "stdin-nonblocking"
version = "0.1.0"
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
description = "Dependency-less non-blocking stdin reader using background threads. Supports streaming and immediate fallback defaults."
repository = "https://github.com/jzombie/rust-stdin-nonblocking"
edition = "2021"
license = "MIT"

[dependencies]

[dev-dependencies]
doc-comment = "0.3.3"

[workspace]
members = [
    ".",
    "tokio-example-app"
]
resolver = "2"
